# learning_rag

./: .gitignore  RAG知识库-学习路线与实验方案.md  pyproject.toml
data/raw/: sample.txt
notebooks/: 01_加载与探索.ipynb  02_Chunking实验.ipynb  03_端到端管线.ipynb
openspec/changes/rag-knowledge-base/: design.md  proposal.md  tasks.md
openspec/changes/rag-knowledge-base/specs/document-loading/: spec.md
openspec/changes/rag-knowledge-base/specs/hybrid-retrieval/: spec.md
openspec/changes/rag-knowledge-base/specs/llm-inference/: spec.md
openspec/changes/rag-knowledge-base/specs/local-embedding/: spec.md
openspec/changes/rag-knowledge-base/specs/query-pipeline/: spec.md
openspec/changes/rag-knowledge-base/specs/text-chunking/: spec.md
openspec/changes/rag-knowledge-base/specs/vector-storage/: spec.md
src/: chunking.py  cli.py  config.py  embedding.py  llm.py  loader.py  pipeline.py  prompts.py  retrieval.py  vector_store.py
